update: fix css on mobile.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,6 +6,11 @@
   width: 10%;
 }
 
+.youtube {
+  width: 1064px;
+  height: 598.5px;
+}
+
 .dashboard {
   width: 30%;
 }
@@ -24,6 +29,10 @@
   padding: 25px;
 }
 
+.model {
+  width: 60%;
+}
+
 table {
   height: 300px;
   overflow: scroll;
@@ -32,6 +41,12 @@ table {
 @media screen and (max-width: 600px) {
   .logo {
     width: 30%;
+  }
+  .ivo {
+    width: 30%;
+  }
+  .model {
+    width: 80%;
   }
   .dashboard {
     width: 80%;
@@ -42,4 +57,8 @@ table {
   .column {
     padding: 10px;
   }
+  .youtube {
+    width: 80%;
+    height: 30%
+  }  
 }
